@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.gfq"
        name="GFQ"
-       version="0.0.1"
+       version="0.0.2"
        provider-name="Bawitdaba &lt;bawitdaba@gmail.com&gt;">
   <requires>
-    <import addon="xbmc.python" version="1.0"/>
+    <import addon="xbmc.python" version="2.0"/>
 	<import addon="script.module.beautifulsoup" version="3.0.8"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
@@ -18,7 +18,6 @@
 Watch live shows and previously recorded podcasts from the Guys From Queens (GFQ) Network
 
 http://www.guysfromqueens.com
-http://www.gfqnetwork.com
 http://www.gfqlive.tv</description>
     <platform>all</platform>
   </extension>
