@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
   <string id='30000'>GFQ Live Streams</string>
-  <string id='30001'>Stickam 1 Mbps</string>
-  <string id='30002'>Ustream 500 Kbps</string>
-  <string id='30101'>Behind The Counter Comics</string>
-  <string id='30102'>Big Brother Rewind</string>
-  <string id='30103'>Im Just Saying</string>
-  <string id='30104'>Spencer Kobren's The Bald Truth</string>
-  <string id='30105'>Tech News Weekly</string>
-  <string id='30106'>The Andrew Zarian Show</string>
-  <string id='30107'>The Chaunce Hayden Show</string>
-  <string id='30108'>The Free For All</string>
-  <string id='30109'>The News With Jessica</string>
-  <string id='30110'>What The Tech</string>
+  <string id='30001'>GFQ Live - Vaughn (1.2 MB/s)</string>
+  <string id='30002'>GFQ Live - UStream (980 KB/s)</string>
+  <string id='30003'>GFQ Live - Justin.TV (1.2 MB/s)</string>
+  <string id='30004'>GFQ Live - Audio Only (64 KB/s)</string>
+  <string id='30100'>Latest Episodes</string>
 </strings>
