@@ -1,2 +1,11 @@
+[B]0.0.2[/B]
+- Changed show series to be listed dynamically from http://www.guysfromqueens.com/feeds/
+- Added Latest Episodes for a recent listing of GFQ Network shows
+- Fixed a bug where due to a feedburner formatting issue the RSS Video feeds (Episodes) were not getting loaded properly
+- Removed Stickam live feed from the GFQ Live menu as the streaming service no longer exists
+- Added Vaughn live streaming service to GFQ Live menu
+- Added live streaming audio only to the GFQ Live menu
+- Changed GFQ Live titles to match the correct bitrate of the streams
+
 [B]0.0.1[/B]
-- Initial release for dharma, derived from the TWiT addon made by divingmule and Adam B
+- Initial release, derived from the TWiT addon made by divingmule and Adam B
